--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "myapp",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "gulp": "./node_modules/.bin/gulp"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -14,6 +15,7 @@
     "express": "~4.14.0",
     "gulp": "^3.9.1",
     "jade": "~1.11.0",
+    "mongodb": "^2.2.16",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
