--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp": "^3.9.1",
     "jade": "~1.11.0",
     "mongodb": "^2.2.16",
+    "mongoose": "^4.7.4",
     "morgan": "~1.7.0",
+    "mysql": "^2.12.0",
     "serve-favicon": "~2.3.0",
     "swig": "^1.4.2"
   }
